dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AC_CONFIG_SRCDIR(hpiview.spec.in)
AM_INIT_AUTOMAKE(hpiview, 0.6)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

HPIVIEW_PKG=$PACKAGE_NAME

pkg_modules="gtk+-2.0 >= 2.0.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)
AC_SUBST(HPIVIEW_PKG)

AC_OUTPUT([
	hpiview.spec
	Makefile
	hpiview/Makefile
])

